@@ -4,9 +4,8 @@
  All Rights Reserved
 
  This program is free software; you can redistribute it and/or
- modify it under the terms of the GNU General Public License
- as published by the Free Software Foundation; either version 2
- of the License, or (at your option) any later version.
+ modify it under the terms of the GNU General Public License v2
+ as published by the Free Software Foundation.
 
  This program is distributed in the hope that it will be useful,
  but WITHOUT ANY WARRANTY; without even the implied warranty of
@@ -18,6 +17,14 @@
  Foundation, Inc., 59 Temple Place - Suite 330, Boston, MA  02111-1307, USA.
 
 */
+
+/* Check and see if their remember me is the same or lower then local
+ * if so disable the checkbox 
+ */
+if (conf('local_length') >= conf('remember_length')) { 
+	$remember_disabled = 'disabled="disabled"';
+}
+
 ?>
 
 <div id="container">
@@ -29,23 +36,17 @@
 			<input class="text_input" type="text" name="username" value="<?php echo  $_REQUEST['username']; ; ?>" /></p>
 			<p class="loginp_1"><span><?php echo  _('Password'); ; ?>:</span> 
 			<input class="text_input" type="password" name="password" value="" /></p>
-			<p class="loginp_1"><?php echo _('Remember Me'); ?><input class="check_input" type="checkbox" name="rememberme" /></p>
+			<p class="loginp_1"><?php echo _('Remember Me'); ?><input class="check_input" type="checkbox" name="rememberme" <?php echo $remember_disabled; ?> /></p>
 			<?php echo  conf('login_message'); ; ?>
 			<?php $GLOBALS['error']->print_error('general'); ?>
 			<p><input class="button" type="submit" value="<?php echo _('Login'); ?>" /></p>
 			<input type="hidden" name="referrer" value="<?php echo $referrer; ?>" />
 			<input type="hidden" name="action" value="login" />
 		</form>
+		<?php if (conf('allow_public_registration')) { ?>
+		<span class="text-action">
+			<a href="<?php echo conf('web_path'); ?>/register.php"><?php echo _('Register'); ?></a>
+		</span>
+		<?php } // end if (conf('allow_public_registration')) ?>
 	</div>
 </div>
-
-<?php
-if (conf('allow_public_registration')) { ?>
-<div align="center">
-	<?php show_box_top(); ?>
-	<span class="text-action">
-		<a href="<?php echo conf('web_path'); ?>/register.php"><?php echo _('Register'); ?></a>
-	</span>
-	<?php show_box_bottom(); ?>
-</div>
-<?php } // end if (conf('allow_public_registration')) ?>
